# root

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  flake.nix
jni/: Cargo.toml
jni/src/: jni.rs  lib.rs  rpc.rs
netcode/: Cargo.toml  LICENSE
netcode/src/: lib.rs
patches/: core.patch
rules/: Cargo.toml
rules/src/: lib.rs
tests/: Cargo.toml
tests/tests/: netcode.rs
