[workspace]
resolver = "2"

members = [
    "master-server",
    "netcode",
    "jni",
    "rules",
    "tests",
]

[workspace.dependencies]
thiserror = "1.0"
serde = "1.0"
itertools = "0.12"
ipnet = { version = "2.9", features = ["serde"] }
futures = "0.3"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tarpc = { version = "0.34", features = ["full"] }
