[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
xalliance-netcode = { path = "../netcode" }
xalliance-master-server = { path = "../master-server" }
xalliance-jni = { path = "../jni" }

thiserror = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
ipnet = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tarpc = { workspace = true }

[[test]]
name = "netcode"
